tools/flowc/tests/errors/error44.flow
import tools/flowc/tests/errors/error44_2;

export {
	cyclic() -> void;
}

cyclic() -> void {
	cyclic2();
}
